--- a/src/css/index.less
+++ b/src/css/index.less
@@ -1,172 +1,216 @@
 .notify {
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  z-index: 1000;
-  top: 0;
-  left: 0;
-  &.notify-msg-p {
-    display: inline;
-    height: 0;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    background-color: rgba(0,0,0,.6);
-  }
-  &.notify-tips-p {
-    display: inline;
-    height: 0;
-    top: 0;
-    left: 0;
-    position: absolute;
-  }
-  .notify-mask {
-    background-color: #000;
-    opacity: 0.4;
-    position: absolute;
-    top: 0;
-    left: 0;
     width: 100%;
     height: 100%;
-  }
-  .notify-main {
-    min-width: 250px;
-    max-width: 500px;
-    min-height: 150px;
-    background-color: #fff;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    position: absolute;
-    border: 1px solid #eee;
-    box-shadow: 1px 1px 50px rgba(0,0,0,0.3);
-    border-radius: 2px;
-  }
-  .notify-content {
-    min-height: 65px;
-    padding: 20px;
-    iframe {
-      width: 100%;
-      height: 100%;
-      border: none;
-      overflow: none;
+    position: fixed;
+    z-index: 1000;
+    top: 0;
+    left: 0;
+
+    &.notify-msg-p {
+        display: inline;
+        height: 0;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+        background-color: rgba(0,0,0,.6);
     }
-  }
-  .notify-btns {
-    text-align: right;
-    padding: 0 8px 0 0;
-  }
-  .notify-alert {
-    h2.notice-title {
-      width: 100%;
-      height: 43px;
-      line-height: 43px;
-      background-color: #F8F8F8;
-      border-bottom: 1px solid #eee;
-      font-size: 14px;
-      padding-left: 15px;
-      cursor: move;
-      -moz-user-select: -moz-none;
-      -webkit-user-select: none;
-      .icon-remove {
+
+    &.notify-tips-p {
+        display: inline;
+        height: 0;
+        top: 0;
+        left: 0;
         position: absolute;
-        right: 10px;
-        font-size: 20px;
-        top: 10px;
-        cursor: pointer;
-      }
     }
-  }
-  .notify-loading {
-    display: inline;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-  }
-  .notify-msg {
-    min-width: 50px;
-    display: inline;
-    height: 48px;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    background-color: rgba(0,0,0,.6);
-    color: #fff;
-    padding: 12px 25px;
-    text-align: center;
-    border-radius: 5px;
-  }
-  .notify-tips {
-    min-width: 50px;
-    max-width: 400px;
-    display: inline;
-    min-height: 32px;
-    position: absolute;
-    left: -50%;
-    background-color: #000;
-    color: #fff;
-    padding: 6px 12px;
-    border-radius: 5px;
-    & > em {
-      border: 10px solid #000;
-      position: absolute;
-      display: inline-block;
-      width: 20px;
-      height: 20px;
+
+    .notify-mask {
+        background-color: #000;
+        opacity: 0.4;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
     }
-  }
-  .notify-tips-0 {
-    //上
-    & > em {
-      border-top-color: transparent!important;
-      border-right-color: transparent!important;
-      border-bottom-color: transparent!important;
-      left: 15px;
-      bottom: -8px;
+
+    .notify-main {
+        min-width: 250px;
+        max-width: 500px;
+        min-height: 150px;
+        background-color: #fff;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+        position: absolute;
+        border: 1px solid #eee;
+        box-shadow: 1px 1px 50px rgba(0,0,0,0.3);
+        border-radius: 2px;
     }
-  }
-  .notify-tips-1 {
-    //右
-    & > em {
-      border-top-color: transparent!important;
-      border-left-color: transparent!important;
-      border-right-color: transparent!important;
-      left: -8px;
-      top: 0;
-    }
-  }
-  .notify-tips-2 {
-    //下
-    & > em {
-      border-top-color: transparent!important;
-      border-left-color: transparent!important;
-      border-bottom-color: transparent!important;
-      left: 15px;
-      top: -8px;
-    }
-  }
-  .notify-tips-3 {
-    //左
-    max-width: 300px;
-    & > em {
-      border-top-color: transparent!important;
-      border-left-color: transparent!important;
-      border-right-color: transparent!important;
-      right: -8px;
-      top: 0;
-    }
-  }
-  .notify-iframe {
-    //iframe
-    max-width: 2000px;
+
     .notify-content {
-      padding: 0;
+        min-height: 65px;
+        padding: 20px;
+
+        iframe {
+            width: 100%;
+            height: 100%;
+            border: none;
+            overflow: none;
+        }
     }
-  }
+
+    .notify-btns {
+        text-align: right;
+        padding: 0 8px 0 0;
+    }
+
+    .notify-alert {
+        h2.notice-title {
+            width: 100%;
+            height: 43px;
+            line-height: 43px;
+            background-color: #F8F8F8;
+            border-bottom: 1px solid #eee;
+            font-size: 14px;
+            padding-left: 15px;
+            cursor: move;
+            -moz-user-select: -moz-none;
+            -webkit-user-select: none;
+
+            .icon-remove {
+                position: absolute;
+                right: 10px;
+                font-size: 20px;
+                top: 10px;
+                cursor: pointer;
+            }
+        }
+    }
+
+    .notify-loading {
+        display: inline;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+        width: 50px;
+        height: 50px;
+
+        @keyframes loading {
+            from {
+                -webkit-transform: rotate(0deg);
+                transform: rotate(0deg);
+            }
+            to {
+                -webkit-transform: rotate(360deg);
+                transform: rotate(360deg);
+            }
+        }
+
+        span {
+            display: inline-block;
+            width: 30px;
+            height: 30px;
+            border: 2px solid #f3f3f3;
+            border-top: 2px solid #499ae4;
+            border-right: 2px solid #499ae4;
+            border-radius: 50%;
+            animation: loading 1.0s infinite linear;
+        }
+    }
+
+    .notify-msg {
+        min-width: 50px;
+        display: inline;
+        height: 48px;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+        background-color: rgba(0,0,0,.6);
+        color: #fff;
+        padding: 12px 25px;
+        text-align: center;
+        border-radius: 5px;
+    }
+
+    .notify-tips {
+        min-width: 50px;
+        max-width: 400px;
+        display: inline;
+        min-height: 32px;
+        position: absolute;
+        left: -50%;
+        background-color: #303133;
+        color: #fff;
+        padding: 6px 12px;
+        border-radius: 5px;
+
+        & > em {
+            border: 10px solid #303133;
+            position: absolute;
+            display: inline-block;
+            width: 20px;
+            height: 20px;
+        }
+    }
+
+    .notify-tips-0 {
+        //上
+        & > em {
+            border-top-color: transparent!important;
+            border-right-color: transparent!important;
+            border-bottom-color: transparent!important;
+            left: 15px;
+            bottom: -8px;
+        }
+    }
+
+    .notify-tips-1 {
+        //右
+        & > em {
+            border-top-color: transparent!important;
+            border-left-color: transparent!important;
+            border-right-color: transparent!important;
+            left: -8px;
+            top: 0;
+        }
+    }
+
+    .notify-tips-2 {
+        //下
+        & > em {
+            border-top-color: transparent!important;
+            border-left-color: transparent!important;
+            border-bottom-color: transparent!important;
+            left: 15px;
+            top: -8px;
+        }
+    }
+
+    .notify-tips-3 {
+        //左
+        max-width: 300px;
+
+        & > em {
+            border-top-color: transparent!important;
+            border-left-color: transparent!important;
+            border-right-color: transparent!important;
+            right: -8px;
+            top: 0;
+        }
+    }
+
+    .notify-iframe {
+        //iframe
+        max-width: 2000px;
+
+        .notify-content {
+            padding: 0;
+        }
+    }
 }
