--- a/src/css/index.less
+++ b/src/css/index.less
@@ -1,4 +1,4 @@
-* {
+*[class^="vl-notify"]{
     box-sizing: border-box;
     padding: 0;
     margin: 0;
@@ -75,6 +75,7 @@
 
     .vl-notify-alert {
         h2.vl-notice-title {
+            box-sizing: border-box;
             width: 100%;
             height: 43px;
             line-height: 43px;
@@ -85,6 +86,7 @@
             cursor: move;
             -moz-user-select: -moz-none;
             -webkit-user-select: none;
+            margin: 0;
 
             .icon-remove {
                 position: absolute;
@@ -122,8 +124,8 @@
             width: 30px;
             height: 30px;
             border: 2px solid #f3f3f3;
-            border-top: 2px solid #499ae4;
-            border-right: 2px solid #499ae4;
+            border-top: 2px solid #999999;
+            border-right: 2px solid #999999;
             border-radius: 50%;
             animation: loading 1.0s infinite linear;
         }
