添加遮罩层

--- a/src/css/index.less
+++ b/src/css/index.less
@@ -1,3 +1,11 @@
+/**
+ * @Author: 左盐
+ * @Date:   2018-03-19 17:30:29
+ * @Email:  huabinglan@163.com
+ * @Project: xxx
+ * @Last modified by:   左盐
+ * @Last modified time: 2018-03-19 18:05:26
+ */
 *[class^="vl-notify"]{
     box-sizing: border-box;
     padding: 0;
@@ -28,16 +36,6 @@
         top: 0;
         left: 0;
         position: absolute;
-    }
-
-    .vl-notify-mask {
-        background-color: #000;
-        opacity: 0.4;
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
     }
 
     .vl-notify-main {
