--- a/src/css/index.less
+++ b/src/css/index.less
@@ -4,7 +4,7 @@
  * @Email:  huabinglan@163.com
  * @Project: xxx
  * @Last modified by:   左盐
- * @Last modified time: 2018-03-19 18:05:26
+ * @Last modified time: 2018-03-23 18:31:34
  */
 *[class^="vl-notify"]{
     box-sizing: border-box;
@@ -13,12 +13,12 @@
 }
 
 .vl-notify {
-    width: 100%;
-    height: 100%;
-    position: fixed;
+    position: absolute;
     z-index: 1000;
-    top: 0;
-    left: 0;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
 
     &.vl-notify-msg-p {
         display: inline;
@@ -38,16 +38,11 @@
         position: absolute;
     }
 
-    .vl-notify-main {
+    &.vl-notify-main {
         min-width: 250px;
         max-width: 500px;
         min-height: 100px;
         background-color: #fff;
-        left: 50%;
-        top: 50%;
-        transform: translate(-50%, -50%);
-        -ms-transform: translate(-50%, -50%);
-        position: absolute;
         border: 1px solid #eee;
         box-shadow: 1px 1px 50px rgba(0,0,0,0.3);
         border-radius: 2px;
@@ -71,7 +66,7 @@
         padding: 0 8px 0 0;
     }
 
-    .vl-notify-alert {
+    &.vl-notify-alert {
         h2.vl-notice-title {
             box-sizing: border-box;
             width: 100%;
