--- a/src/css/index.less
+++ b/src/css/index.less
@@ -6,220 +6,200 @@
  * @Last modified by:   左盐
  * @Last modified time: 2018-03-24 15:59:18
  */
-*[class^="vl-notify"]{
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-    outline:none;
+
+*[class^="vl-notify"] {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  outline: none;
 }
 
 .vl-notify {
-    position: fixed;
-    z-index: 1000;
+  position: fixed;
+  z-index: 1000;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  &.vl-notify-msg-p {
+    display: inline;
+    height: 0;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
-
-    &.vl-notify-msg-p {
-        display: inline;
-        height: 0;
-        left: 50%;
-        top: 50%;
-        transform: translate(-50%, -50%);
-        -ms-transform: translate(-50%, -50%);
-        background-color: rgba(0,0,0,.6);
+    background-color: rgba(0, 0, 0, .6);
+  }
+  &.vl-notify-tips-p {
+    display: inline;
+    height: 0;
+    top: 0;
+    left: 0;
+    position: absolute;
+  }
+  &.vl-notify-main {
+    min-width: 250px;
+    max-width: 1500px;
+    min-height: 100px;
+    background-color: #fff;
+    border: 1px solid #eee;
+    box-shadow: 1px 1px 50px rgba(0, 0, 0, 0.3);
+    border-radius: 2px;
+    padding-bottom: 5px;
+  }
+  .vl-notify-content {
+    min-height: 65px;
+    padding: 20px;
+    iframe {
+      width: 100%;
+      height: 100%;
+      border: none;
+      overflow: none;
     }
-
-    &.vl-notify-tips-p {
-        display: inline;
-        height: 0;
-        top: 0;
-        left: 0;
+  }
+  .vl-notify-btns {
+    text-align: right;
+    padding: 0 8px 0 0;
+  }
+  &.vl-notify-alert {
+    h2.vl-notice-title {
+      box-sizing: border-box;
+      width: 100%;
+      height: 43px;
+      line-height: 43px;
+      background-color: #F8F8F8;
+      border-bottom: 1px solid #eee;
+      font-size: 14px;
+      padding-left: 15px;
+      cursor: move;
+      -moz-user-select: -moz-none;
+      -webkit-user-select: none;
+      margin: 0;
+      .icon-remove {
         position: absolute;
-    }
-
-    &.vl-notify-main {
-        min-width: 250px;
-        max-width: 1500px;
-        min-height: 100px;
-        background-color: #fff;
-        border: 1px solid #eee;
-        box-shadow: 1px 1px 50px rgba(0,0,0,0.3);
-        border-radius: 2px;
-        padding-bottom: 5px;
-    }
-
-    .vl-notify-content {
-        min-height: 65px;
-        padding: 20px;
-
-        iframe {
-            width: 100%;
-            height: 100%;
-            border: none;
-            overflow: none;
-        }
-    }
-
-    .vl-notify-btns {
-        text-align: right;
-        padding: 0 8px 0 0;
-    }
-
-    &.vl-notify-alert {
-        h2.vl-notice-title {
-            box-sizing: border-box;
-            width: 100%;
-            height: 43px;
-            line-height: 43px;
-            background-color: #F8F8F8;
-            border-bottom: 1px solid #eee;
-            font-size: 14px;
-            padding-left: 15px;
-            cursor: move;
-            -moz-user-select: -moz-none;
-            -webkit-user-select: none;
-            margin: 0;
-
-            .icon-remove {
-                position: absolute;
-                right: 10px;
-                font-size: 14px;
-                text-shadow:0 1px 0 rgba(255, 255, 255, 0.5);
-                top: 0px;
-                font-weight: normal;
-                cursor: pointer;
-                color: #b3b3b3;
-                font-style: normal;
-                &::before {
-                  content: "\2716";
-              }
-            }
-        }
-    }
-
-    &.vl-notify-loading {
-        display: inline;
-        left: 50%;
-        top: 50%;
-        transform: translate(-50%, -50%);
-        -ms-transform: translate(-50%, -50%);
-        width: 50px;
-        height: 50px;
-        @keyframes loading {
-            from {
-                -webkit-transform: rotate(0deg);
-                transform: rotate(0deg);
-            }
-
-            to {
-                -webkit-transform: rotate(360deg);
-                transform: rotate(360deg);
-            }
-        }
-
-        span {
-            display: inline-block;
-            width: 30px;
-            height: 30px;
-            border: 2px solid #f3f3f3;
-            border-top: 2px solid #999999;
-            border-right: 2px solid #999999;
-            border-radius: 50%;
-            animation: loading 1.0s infinite linear;
-        }
-    }
-
-    &.vl-notify-msg {
-        min-width: 50px;
-        display: inline;
-        minheight: 40px;
+        right: 10px;
         font-size: 14px;
-        left: 50%;
-        top: 50%;
-        transform: translate(-50%, -50%);
-        -ms-transform: translate(-50%, -50%);
-        background-color: rgba(0,0,0,.6);
-        color: #fff;
-        padding: 12px 25px;
-        text-align: center;
-        border-radius: 5px;
-    }
-
-    &.vl-notify-tips {
-        min-width: 50px;
-        max-width: 400px;
-        display: inline;
-        min-height: 32px;
-        position: absolute;
-        left: -50%;
-        background-color: #303133;
-        color: #fff;
-        padding: 6px 12px;
-        border-radius: 5px;
-        transform:none;
-
-        &:after {
-            content: " ";
-            border: 10px solid #303133;
-            position: absolute;
-            display: inline-block;
+        text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+        top: 0px;
+        font-weight: normal;
+        cursor: pointer;
+        color: #b3b3b3;
+        font-style: normal;
+        &::before {
+          content: "\2716";
         }
+      }
     }
-
-    &.vl-notify-tips-0 {
-        //上
-        &:after {
-            border-top-color: transparent!important;
-            border-right-color: transparent!important;
-            border-bottom-color: transparent!important;
-            left: 15px;
-            bottom: -8px;
-        }
+  }
+  &.vl-notify-loading {
+    display: inline;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    width: 50px;
+    height: 50px;
+    @keyframes loading {
+      from {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+      }
+      to {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+      }
     }
-
-    &.vl-notify-tips-1 {
-        //右
-        &:after {
-            border-top-color: transparent!important;
-            border-left-color: transparent!important;
-            border-right-color: transparent!important;
-            left: -8px;
-            top: 0;
-        }
+    span {
+      display: inline-block;
+      width: 30px;
+      height: 30px;
+      border: 2px solid #f3f3f3;
+      border-top: 2px solid #999999;
+      border-right: 2px solid #999999;
+      border-radius: 50%;
+      animation: loading 1.0s infinite linear;
     }
-
-    &.vl-notify-tips-2 {
-        //下
-        &:after {
-            border-top-color: transparent!important;
-            border-left-color: transparent!important;
-            border-bottom-color: transparent!important;
-            left: 15px;
-            top: -8px;
-        }
+  }
+  &.vl-notify-msg {
+    min-width: 50px;
+    display: inline;
+    minheight: 40px;
+    font-size: 14px;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    background-color: rgba(0, 0, 0, .6);
+    color: #fff;
+    padding: 12px 25px;
+    text-align: center;
+    border-radius: 5px;
+  }
+  &.vl-notify-tips {
+    min-width: 50px;
+    max-width: 400px;
+    display: inline;
+    min-height: 32px;
+    position: absolute;
+    left: -50%;
+    background-color: #303133;
+    color: #fff;
+    padding: 6px 12px;
+    border-radius: 5px;
+    transform: none;
+    &:after {
+      content: " ";
+      border: 10px solid #303133;
+      position: absolute;
+      display: inline-block;
     }
-
-    &.vl-notify-tips-3 {
-        //左
-        max-width: 300px;
-
-        &:after {
-            border-top-color: transparent!important;
-            border-left-color: transparent!important;
-            border-right-color: transparent!important;
-            right: -8px;
-            top: 0;
-        }
+  }
+  &.vl-notify-tips-0 {
+    //上
+    &:after {
+      border-top-color: transparent !important;
+      border-right-color: transparent !important;
+      border-bottom-color: transparent !important;
+      left: 15px;
+      bottom: -8px;
     }
-
-    .vl-notify-iframe {
-        //iframe
-        max-width: 2000px;
-
-        .vl-notify-content {
-            padding: 0;
-        }
+  }
+  &.vl-notify-tips-1 {
+    //右
+    &:after {
+      border-top-color: transparent !important;
+      border-left-color: transparent !important;
+      border-right-color: transparent !important;
+      left: -8px;
+      top: 0;
     }
+  }
+  &.vl-notify-tips-2 {
+    //下
+    &:after {
+      border-top-color: transparent !important;
+      border-left-color: transparent !important;
+      border-bottom-color: transparent !important;
+      left: 15px;
+      top: -8px;
+    }
+  }
+  &.vl-notify-tips-3 {
+    //左
+    max-width: 300px;
+    &:after {
+      border-top-color: transparent !important;
+      border-left-color: transparent !important;
+      border-right-color: transparent !important;
+      right: -8px;
+      top: 0;
+    }
+  }
+  .vl-notify-iframe {
+    //iframe
+    max-width: 2000px;
+    .vl-notify-content {
+      padding: 0;
+    }
+  }
 }
