--- a/src/css/index.less
+++ b/src/css/index.less
@@ -19,6 +19,7 @@
     opacity: 0;
     transform: scale(0.5) translate(-100%, -100%);
   }
+
   to {
     opacity: 1;
     transform: scale(1) translate(-50%, -50%);
@@ -32,6 +33,7 @@
   top: 50%;
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
+
   &.vl-notify-msg-p {
     display: inline;
     height: 0;
@@ -41,6 +43,7 @@
     -ms-transform: translate(-50%, -50%);
     background-color: rgba(0, 0, 0, .6);
   }
+
   &.vl-notify-tips-p {
     display: inline;
     height: 0;
@@ -48,6 +51,7 @@
     left: 0;
     position: absolute;
   }
+
   &.vl-notify-main {
     min-width: 250px;
     max-width: 1500px;
@@ -58,9 +62,11 @@
     border-radius: 2px;
     padding-bottom: 5px;
   }
+
   .vl-notify-content {
     min-height: 65px;
     padding: 20px;
+
     iframe {
       width: 100%;
       height: 100%;
@@ -68,13 +74,16 @@
       overflow: none;
     }
   }
+
   .vl-notify-btns {
     text-align: right;
     padding: 0 8px 0 0;
   }
+
   &.vl-notify-alert {
     animation: fadein 0.3s;
     max-width: 500px;
+
     h2.vl-notice-title {
       box-sizing: border-box;
       width: 100%;
@@ -88,6 +97,7 @@
       -moz-user-select: -moz-none;
       -webkit-user-select: none;
       margin: 0;
+
       .icon-remove {
         position: absolute;
         right: 10px;
@@ -96,27 +106,58 @@
         top: 0px;
         font-weight: normal;
         cursor: pointer;
-        color: #b3b3b3;
+        color: rgb(51, 51, 51);
         font-style: normal;
+
         &::before {
           content: "\2716";
         }
       }
+
+      .lv-icon-max {
+        position: absolute;
+        right: 32px;
+        font-size: 14px;
+        text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+        top: 0px;
+        font-weight: normal;
+        cursor: pointer;
+        color: rgb(51, 51, 51);
+        font-style: normal;
+
+      }
+
+      .lv-icon-mini {
+        position: absolute;
+        right: 56px;
+        font-size: 14px;
+        text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+        top: 0px;
+        font-weight: normal;
+        cursor: pointer;
+        color: rgb(51, 51, 51);
+        font-style: normal;
+      }
     }
+
     .vl-notify-content {
       display: flex;
+
       .vl-notify-content-div {
         margin-left: 10px;
         flex: 1;
       }
     }
   }
+
   &.vl-notify-iframe {
     max-width: 2000px;
+
     .vl-notify-content {
       padding: 0;
     }
   }
+
   &.vl-notify-loading {
     animation: fadein 0.2s;
     display: inline;
@@ -126,16 +167,19 @@
     -ms-transform: translate(-50%, -50%);
     width: 50px;
     height: 50px;
+
     @keyframes loading {
       from {
         -webkit-transform: rotate(0deg);
         transform: rotate(0deg);
       }
+
       to {
         -webkit-transform: rotate(360deg);
         transform: rotate(360deg);
       }
     }
+
     span {
       display: inline-block;
       width: 30px;
@@ -147,6 +191,7 @@
       animation: loading 1.0s infinite linear;
     }
   }
+
   &.vl-notify-msg {
     animation: fadein 0.2s;
     min-width: 50px;
@@ -163,6 +208,7 @@
     text-align: center;
     border-radius: 5px;
   }
+
   &.vl-notify-tips {
     min-width: 50px;
     max-width: 400px;
@@ -175,6 +221,7 @@
     padding: 6px 12px;
     border-radius: 5px;
     transform: none;
+
     &:after {
       content: " ";
       border: 10px solid #303133;
@@ -182,7 +229,9 @@
       display: inline-block;
     }
   }
+
   &.vl-notify-tips-0 {
+
     //上
     &:after {
       border-top-color: transparent !important;
@@ -192,7 +241,9 @@
       bottom: -8px;
     }
   }
+
   &.vl-notify-tips-1 {
+
     //右
     &:after {
       border-top-color: transparent !important;
@@ -202,7 +253,9 @@
       top: 0;
     }
   }
+
   &.vl-notify-tips-2 {
+
     //下
     &:after {
       border-top-color: transparent !important;
@@ -212,9 +265,11 @@
       top: -8px;
     }
   }
+
   &.vl-notify-tips-3 {
     //左
     max-width: 300px;
+
     &:after {
       border-top-color: transparent !important;
       border-left-color: transparent !important;
