--- a/src/css/index.less
+++ b/src/css/index.less
@@ -12,6 +12,8 @@
   padding: 0;
   margin: 0;
   outline: none;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 @keyframes fadein {
