--- a/src/css/index.less
+++ b/src/css/index.less
@@ -104,6 +104,8 @@
       .lv-title {
         text-overflow: ellipsis;
         flex: 1;
+        position: relative;
+        z-index: 100000;
       }
 
       .icon-remove {
