--- a/packages/layer/src/css/index.less
+++ b/packages/layer/src/css/index.less
@@ -89,7 +89,7 @@
     h2.vl-notice-title {
       box-sizing: border-box;
       width: 100%;
-      height: 43px;
+      height: 42px;
       line-height: 43px;
       background-color: #F8F8F8;
       border-bottom: 1px solid #eee;
@@ -106,6 +106,7 @@
       .lv-title {
         text-overflow: ellipsis;
         flex: 1;
+        height: 100%;
       }
 
       .icon-remove {
@@ -209,7 +210,7 @@
     animation: fadein 0.2s;
     min-width: 50px;
     display: inline;
-    min-height: 40px;
+    min-height: 44px;
     font-size: 14px;
     left: 50%;
     top: 50%;
