--- a/packages/layer/src/css/index.less
+++ b/packages/layer/src/css/index.less
@@ -28,6 +28,10 @@
   }
 }
 
+.vl-html-scrollbar-hidden {
+  overflow-y: hidden !important;
+}
+
 .vl-notify {
   position: fixed;
   z-index: 1000;
@@ -174,13 +178,18 @@
 
   &.vl-notify-loading {
     animation: fadein 0.2s;
-    display: inline;
+    display: inline-block;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
     width: 50px;
     height: 50px;
+    display: none;
+
+    &:nth-last-child(1) {
+      display: inline-block;
+    }
 
     @keyframes loading {
       from {
