--- a/packages/layer/src/css/index.less
+++ b/packages/layer/src/css/index.less
@@ -307,7 +307,7 @@
     display: inline-block;
     width: 17px;
     height: 17px;
-    position: fixed;
+    position: absolute;
     right: 0px;
     bottom: 0;
     z-index: 100000;
