修复某种情况下loading样式被覆盖bug

--- a/packages/layer/src/css/index.less
+++ b/packages/layer/src/css/index.less
@@ -189,7 +189,7 @@
     display: none;
 
     &:nth-last-child(1) {
-      display: inline-block;
+      display: inline-block !important;
     }
 
     @keyframes loading {
