修复loading自动隐藏bug

--- a/packages/layer/src/css/index.less
+++ b/packages/layer/src/css/index.less
@@ -188,6 +188,10 @@
     height: 50px;
     display: none;
 
+    // &:nth-last-child(2) {
+    //   display: inline-block !important;
+    // }
+
     &:nth-last-child(1) {
       display: inline-block !important;
     }
