--- a/packages/layer/src/css/index.less
+++ b/packages/layer/src/css/index.less
@@ -184,8 +184,8 @@
     top: 50%;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
-    width: 50px;
-    height: 50px;
+    min-width: 50px;
+    min-height: 50px;
     display: none;
 
     // &:nth-last-child(2) {
@@ -235,6 +235,22 @@
     padding: 12px 25px;
     text-align: center;
     border-radius: 5px;
+
+    &.vl-notify-loading {
+      min-height: 50px;
+
+      span {
+        width: 20px;
+        height: 20px;
+        vertical-align: middle;
+        margin-right: 7px;
+      }
+
+      i {
+        font-style: normal;
+        font-size: 14px;
+      }
+    }
   }
 
   &.vl-notify-tips {
