--- a/packages/layer/src/css/index.less
+++ b/packages/layer/src/css/index.less
@@ -39,6 +39,7 @@
   top: 50%;
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
+  box-sizing: border-box;
 
   &.vl-notify-msg-p {
     display: inline;
