处理resize边界问题

--- a/packages/layer/src/css/index.less
+++ b/packages/layer/src/css/index.less
@@ -108,6 +108,8 @@
       display: flex;
       position: relative;
       z-index: 100000;
+      word-break: keep-all;
+      overflow: hidden;
 
       .lv-title {
         text-overflow: ellipsis;
